--- a/index.html
+++ b/index.html
@@ -26,9 +26,9 @@
             <div class="container menu_container">
                 <div class="menus">
 
-                    <li><a href="usuario.html" class="lmenu">XML</a></li>
-                    <li><a href="clientes.html" class="lmenu">JSON</a></li>
-                    <li><a href="proveedores.html" class="lmenu">SOAP</a></li>
+                    <li><a href="" class="lmenu">XML</a></li>
+                    <li><a href="" class="lmenu">JSON</a></li>
+                    <li><a href="" class="lmenu">SOAP</a></li>
                     
                     
 
