--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <title>Document</title>
 </head>
 <body>
+    <header>
     <nav class="nav_hero">
         <div class="container nav_container">
             <div class="logo">
@@ -21,7 +22,8 @@
                 <li><a href="" class="link">Ejemplos</a></li>
             </div>        
     </nav>
-    <header class="hero">
+    </header>
+    <main class="hero">
         <div class="menu">
             <div class="container menu_container">
                 <div class="menus">
@@ -45,6 +47,6 @@
             </div>
              
         </section>
-    </header>
+    </main>
 </body>
 </html>
