--- a/SOAP.html
+++ b/SOAP.html
@@ -44,7 +44,7 @@
                 </div>
             </div>
     
-            <h4>XML</h4>
+            <h4>SOAP</h4>
             <section class="registro">
                     <img src="imagenes/soap1.jpg" alt="">  
                         <div class="caja1">
