--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
         <section id="Inicio" class="container hero_main">
             <div class="hero_textos">
 
-                <h1 class="title_active">Breve</h1>
+                <h1 class="title_active">Exposición XML, JSON Y SOAP</h1>
 
             </div>
 
@@ -59,14 +59,12 @@
         </section>
         <section id="soap_que">
 
-            <h2>SOAP (Simple Object Access Protocol)</h2>
+            <h2>    </h2>
 
             <article>
-                <h3>¿Qué es SOAP?</h3>
-                <p>SOAP (anteriormente conocido como Simple Object Access Protocol) es un protocolo ligero para el
-                    intercambio de información en entornos descentralizados y distribuidos</p>
+                
             </article>
-            <img src="" alt="Imagen relacionada SOAP">
+            
 
         </section>
     </main>
