--- a/Json.html
+++ b/Json.html
@@ -1,88 +1,93 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="css/reset.css" />
-    <link rel="stylesheet" href="css/style1.css" />
-    <title>Json</title>
-  </head>
-  <div class="caja">
-    <body>
-      <header>
+
+<head>
+  <meta charset="UTF-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link rel="stylesheet" href="css/reset.css" />
+  <link rel="stylesheet" href="css/style1.css" />
+  <title>Json</title>
+</head>
+<div class="caja">
+
+  <body>
+    <header>
+      <nav class="nav_hero">
         <nav class="nav_hero">
-          <nav class="nav_hero">
-            <div class="container nav_container">
-              <div class="logo">
-                <img src="imagenes/archivo-xml.png" />
-                <h2 class="logo_name">
-                  Exposición XML, JSON Y SOAP<span class="point">.</span>
-                </h2>
-              </div>
-              <div class="links">
-                <li><a href="index.html" class="link">Inicio</a></li>
-                <li><a href="Xml.html" class="link">Que es Xml?</a></li>
-                <li><a href="Json.html" class="link">Que es JSON?</a></li>
-                <li><a href="SOAP.html" class="link">Que es SOAP?</a></li>
-                <li><a href="" class="link">Ejemplos</a></li>
-              </div>
+          <div class="container nav_container">
+            <div class="logo">
+              <img src="imagenes/archivo-xml.png" />
+              <h2 class="logo_name">
+                Exposición XML, JSON Y SOAP<span class="point">.</span>
+              </h2>
             </div>
-          </nav>
+            <div class="links">
+              <li><a href="index.html" class="link">Inicio</a></li>
+              <li><a href="Xml.html" class="link">Que es Xml?</a></li>
+              <li><a href="Json.html" class="link">Que es JSON?</a></li>
+              <li><a href="SOAP.html" class="link">Que es SOAP?</a></li>
+              <li><a href="" class="link">Ejemplos</a></li>
+            </div>
+          </div>
         </nav>
-      </header>
-      <main class="hero">
-        <div class="menu">
-          <div class="container menu_container">
-            <div class="menus">
-              <li><a href="Xml.html" class="lmenu">XML</a></li>
-              <li><a href="Json.html" class="lmenu">JSON</a></li>
-              <li><a href="SOAP.html" class="lmenu">SOAP</a></li>
-            </div>
+      </nav>
+    </header>
+    <main class="hero">
+      <div class="menu">
+        <div class="container menu_container">
+          <div class="menus">
+            <li><a href="Xml.html" class="lmenu">XML</a></li>
+            <li><a href="Json.html" class="lmenu">JSON</a></li>
+            <li><a href="SOAP.html" class="lmenu">SOAP</a></li>
           </div>
         </div>
+      </div>
 
-        <h4>Json</h4>
-        <section class="registro">
-          <img src="imagenes/macbook-gd8aa84215_640.jpg" alt="" />
-          <div class="caja1">
-            <h3>Que es Json?</h3>
-            <p>
-              JSON (JavaScript Object Notation - Notación de Objetos de
-              JavaScript ) es un formato ligero de intercambio de datos. Leerlo
-              y escribirlo es simple para humanos, mientras que para las
-              máquinas es simple interpretarlo y generarlo. Está basado en un
-              subconjunto del Lenguaje de Programación JavaScript, Standard
-              ECMA-262 3rd Edition - Diciembre 1999. JSON es un formato de texto
-              que es completamente independiente del lenguaje pero utiliza
-              convenciones que son ampliamente conocidos por los programadores
-              de la familia de lenguajes C, incluyendo C, C++, C#, Java,
-              JavaScript, Perl, Python, y muchos otros. Estas propiedades hacen
-              que JSON sea un lenguaje ideal para el intercambio de datos.
-            </p>
-            <p>JSON está constituído por dos estructuras:</p>
+      <h4>Json</h4>
+      <section class="registro">
+        <img src="imagenes/macbook-gd8aa84215_640.jpg" alt="" />
+        <div class="caja1">
+          <h3>Que es Json?</h3>
+          <p>
+            JSON (JavaScript Object Notation - Notación de Objetos de
+            JavaScript ) es un formato ligero de intercambio de datos. Leerlo
+            y escribirlo es simple para humanos, mientras que para las
+            máquinas es simple interpretarlo y generarlo. Está basado en un
+            subconjunto del Lenguaje de Programación JavaScript, Standard
+            ECMA-262 3rd Edition - Diciembre 1999. JSON es un formato de texto
+            que es completamente independiente del lenguaje pero utiliza
+            convenciones que son ampliamente conocidos por los programadores
+            de la familia de lenguajes C, incluyendo C, C++, C#, Java,
+            JavaScript, Perl, Python, y muchos otros. Estas propiedades hacen
+            que JSON sea un lenguaje ideal para el intercambio de datos.
+          </p>
+          <p>JSON está constituído por dos estructuras:</p>
 
-            <p>
-              Una colección de pares de nombre/valor. En varios lenguajes esto
-              es conocido como un objeto, registro, estructura, diccionario,
-              tabla hash, lista de claves o un arreglo asociativo. Una lista
-              ordenada de valores. En la mayoría de loslenguajes, esto se
-              implementa como arreglos,vectores, listas o sequencias.
-            </p>
+          <p>
+            Una colección de pares de nombre/valor. En varios lenguajes esto
+            es conocido como un objeto, registro, estructura, diccionario,
+            tabla hash, lista de claves o un arreglo asociativo. Una lista
+            ordenada de valores. En la mayoría de loslenguajes, esto se
+            implementa como arreglos,vectores, listas o sequencias.
+          </p>
 
-            <a href="https://json.org/json-es.html"
-              >https://json.org/json-es.html</a
-            >
-          </div>
-        </section>
+          <a href="https://json.org/json-es.html">https://json.org/json-es.html</a>
+        </div>
+      </section>
 
-        <section class="registro">
-          <div class="caja1">
-            <h3>Ejemplos</h3>
-            <p></p>
-          </div>
-        </section>
-      </main>
-    </body>
-  </div>
+      
+      <section class="registro video">
+
+
+        <iframe width="860" height="515" src="https://www.youtube.com/embed/FnW_WeBlCMk" title="YouTube video player"
+          frameborder="0"
+          allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+          allowfullscreen></iframe>
+
+      </section>
+    </main>
+  </body>
+</div>
+
 </html>
