--- a/Json.html
+++ b/Json.html
@@ -27,7 +27,7 @@
               <li><a href="Xml.html" class="link">Que es Xml?</a></li>
               <li><a href="Json.html" class="link">Que es JSON?</a></li>
               <li><a href="SOAP.html" class="link">Que es SOAP?</a></li>
-              <li><a href="" class="link">Ejemplos</a></li>
+
             </div>
           </div>
         </nav>
@@ -76,18 +76,35 @@
         </div>
       </section>
 
-      
-      <section class="registro video">
+      <section class="registro">
+        <div class="caja1">
+          <h3>¿Para qué se utiliza un archivo JSON?</h3>
+          <p>Volviendo a la pregunta inicial de qué es json; JSON es un formato que almacena información estructurada y
+            se utiliza principalmente para transferir datos entre un servidor y un cliente.</p>
+          <p>El archivo es básicamente una alternativa más simple y liviana al XML (Lenguaje de marcado extenso, por sus
+            siglas en inglés) que cuenta con funciones similares.</p>
+          <p>Los desarrolladores usan JSON para trabajar con AJAX (JavaScript asíncrono y XML, por sus siglas en
+            inglés). Estos formatos funcionan bien juntos para lograr la carga asincrónica de los datos almacenados, lo
+            que significa que un sitio web puede actualizar su información sin actualizar la página.</p>
+          <p>Este proceso es más fácil de hacer con JSON que con XML/RSS. Y hoy, como muchos sitios web están adoptando
+            AJAX, el archivo .json se ha vuelto muy popular.</p>
+          <p>Además, permite a los usuarios solicitar datos de un dominio diferente con un método llamado JSONP mediante
+            la aplicación de etiquetas De lo contrario, no puedes transferir dominios cruzados de datos debido a la política “mismo - origen” (same - origin).</p >
+
+        </div >
+
+      </section >
+                <section class="registro video">
 
 
-        <iframe width="860" height="515" src="https://www.youtube.com/embed/FnW_WeBlCMk" title="YouTube video player"
-          frameborder="0"
-          allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-          allowfullscreen></iframe>
+                  <iframe width="860" height="515" src="https://www.youtube.com/embed/FnW_WeBlCMk" title="YouTube video player"
+                    frameborder="0"
+                    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                    allowfullscreen></iframe>
 
-      </section>
-    </main>
-  </body>
-</div>
+                </section>
+    </main >
+  </body >
+</div >
 
-</html>
+</html >
