--- a/Json.html
+++ b/Json.html
@@ -76,7 +76,7 @@
         </div>
       </section>
 
-      <section class="registro">
+      <section class="registro video">
         <div class="caja1">
           <h3>¿Para qué se utiliza un archivo JSON?</h3>
           <p>Volviendo a la pregunta inicial de qué es json; JSON es un formato que almacena información estructurada y
@@ -89,22 +89,35 @@
           <p>Este proceso es más fácil de hacer con JSON que con XML/RSS. Y hoy, como muchos sitios web están adoptando
             AJAX, el archivo .json se ha vuelto muy popular.</p>
           <p>Además, permite a los usuarios solicitar datos de un dominio diferente con un método llamado JSONP mediante
-            la aplicación de etiquetas De lo contrario, no puedes transferir dominios cruzados de datos debido a la política “mismo - origen” (same - origin).</p >
+            la aplicación de etiquetas De lo contrario, no puedes transferir dominios cruzados de datos debido a la
+            política “mismo - origen” (same - origin).</p>
 
-        </div >
+        </div>
+        <div class="caja1">
+          <h3>Sintaxis</h3>
+          <p>Hay dos elementos centrales en un objeto JSON: claves (Keys) y valores (Values).</p>
+          <p> - Las Keys deben ser cadenas de caracteres (strings). Como su nombre en español lo indica, estas contienen
+            una secuencia de caracteres rodeados de comillas.
+          </p>
+          <p> - Los Values son un tipo de datos JSON válido. Puede tener la forma de un arreglo (array), objeto, cadena
+            (string), booleano, número o nulo.</p>
 
-      </section >
-                <section class="registro video">
+          <p>Un objeto JSON comienza y termina con llaves {}. Puede tener dos o más pares de claves/valor dentro, con
+            una coma para separarlos. Así mismo, cada key es seguida por dos puntos para distinguirla del valor.</p>
+        </div>
+
+      </section>
+      <section class="registro video">
 
 
-                  <iframe width="860" height="515" src="https://www.youtube.com/embed/FnW_WeBlCMk" title="YouTube video player"
-                    frameborder="0"
-                    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-                    allowfullscreen></iframe>
+        <iframe width="860" height="515" src="https://www.youtube.com/embed/FnW_WeBlCMk" title="YouTube video player"
+          frameborder="0"
+          allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+          allowfullscreen></iframe>
 
-                </section>
-    </main >
-  </body >
-</div >
+      </section>
+    </main>
+  </body>
+</div>
 
-</html >
+</html>
