Revert "Merge branch 'master' of https://github.com/Eldelaferre/Expo"
This reverts commit 658f2fd6e922053cbe18cd894ac87002b520d5b5, reversing
changes made to a6c69f1034113cea3d0be3581a04f4310c30da50.

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="css/style.css">
-    <title>Inicio</title>
+    <title>Document</title>
 </head>
 
 <body>
@@ -23,7 +23,7 @@
                     <li><a href="Xml.html" class="link">Que es Xml?</a></li>
                     <li><a href="Json.html" class="link">Que es JSON?</a></li>
                     <li><a href="SOAP.html" class="link">Que es SOAP?</a></li>
-                    
+                    <li><a href="" class="link">Ejemplos</a></li>
                 </div>
             </div>
         </nav>
@@ -45,9 +45,28 @@
         <section id="Inicio" class="container hero_main">
             <div class="hero_textos">
 
-                <h1 class="title_active">Exposición XML, JSON Y SOAP</h1>
+                <h1 class="title_active">Breve</h1>
 
             </div>
+
+        </section>
+
+        <section id="xml_que">
+
+        </section>
+        <section id="json_que">
+
+        </section>
+        <section id="soap_que">
+
+            <h2>SOAP (Simple Object Access Protocol)</h2>
+
+            <article>
+                <h3>¿Qué es SOAP?</h3>
+                <p>SOAP (anteriormente conocido como Simple Object Access Protocol) es un protocolo ligero para el
+                    intercambio de información en entornos descentralizados y distribuidos</p>
+            </article>
+            <img src="" alt="Imagen relacionada SOAP">
 
         </section>
     </main>
