--- a/Xml.html
+++ b/Xml.html
@@ -45,7 +45,11 @@
                 </div>
             </div>
 
-            <h4>XML</h4>
+            <section class="registro1">
+                <article>
+                  <h2>XML</h2>
+                </article>
+              </section>
             <section class="registro">
                 <img src="imagenes/coding-g7c8de9afa_640.jpg" alt="">
                 <div class="caja1">
@@ -59,12 +63,35 @@
                         administrativos, como declaración XML, instrucción de procesamiento opcional, declaración de
                         tipo de documento y comentarios. La parte del body se compone de dos partes: estructural y de
                         contenido</p>
-
-
                 </div>
-
-
-
+            </section>
+            <section class="registro1">
+                <article>
+                    <h3>Sintaxis de XML</h3>
+                    <p>
+                        En XML utilizamos puramente etiquetas para almacenar información (también llamadas elementos). Usualmente es necesario tener una etiqueta de apertura y una de cierre:
+                    </p>
+                    <p>
+                     <pre>< elemento>Información.< /elemento></pre>
+                    </p>
+                    <p>
+                        Aunque también es posible tener etiquetas con autocierre:
+                    </p>
+                    <p>
+                        <pre>< elemento/></pre>
+                    </p>
+                    <p>
+                        La información es almacenada jerárquicamente, así pues en el siguiente ejemplo, tenemos que la etiqueta < raiz> es «padre» de la etiqueta < intermedia> y, a su vez, < intermedia> es «padre» de < interna>:
+                    </p>
+                    <p>
+                        <pre>
+                            < raiz>
+                                < intermedia>
+                                    < interna/>
+                                < /intermedia>
+                            < /raiz></pre>
+                    </p>
+                </article>
             </section>
             <section class="registro video">
 
